@@ -1,3 +1,10 @@
+2011-07-14  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[build int] Simplify gnulib-tool(1) invocation.
+
+	* autogen.sh: Simply do "gnulib-tool --update"; don't
+	bother w/ detecting a case for "gnulib-tool --add-import".
+
 2011-07-09  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[build] Work around compilers that omit '\0' from tinysym init.
